--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -9,10 +9,9 @@
     padding: 0 7vw;
     align-items: center;
     justify-content: space-between;
-    height:8vh;
+    height:7vh;
     color:white;
     gap:1vw;
-      
     font-weight: 100;
    
   }
@@ -48,6 +47,25 @@
     cursor: pointer;
   }
   
+
+  .searchContent
+  {
+    display: flex;
+    padding: 0 7vw;
+    align-items: center;
+    justify-content: space-between;
+    height:9vh;
+    background-color:white;
+    color:#008e2d;
+    gap:1vw;
+    font-weight: 400;
+    flex-flow: row;
+  }
+  .searchBar
+  {
+      cursor: pointer;
+  }
+
 
 @media (max-width: 888px)
  {  .navcontent
