--- a/src/components/search.css
+++ b/src/components/search.css
@@ -10,7 +10,7 @@
     width:100%;
     height:90%;
     z-index: 99;
-
+    
 }
 
 .searchPanel .Content
@@ -25,7 +25,8 @@
     margin-right: 7vw;
     margin-top:2vh;
     animation:slideSearch 0.5s ease-out;
-    box-shadow: 0px 0px 4px 0px rgba(96, 96, 96, 0.585), 0 10px 10px 0px rgba(103, 103, 103, 0.629);
+    
+    box-shadow: 0px 0px 4px 4px rgba(158, 158, 158, 0.585), 0 10px 10px 10px rgba(154, 154, 154, 0.629);
 
 }
 
@@ -33,9 +34,11 @@
 {
     display:flex;
     flex-flow: row;
-    justify-content:center;
     padding:10px 5px;
     border-bottom: 4px solid rgba(184, 184, 184, 0.205);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     
 }
 
@@ -44,6 +47,7 @@
     cursor: pointer;
     color:green
 }
+
 
 .search-header input
 {
@@ -59,4 +63,70 @@
 100% {width:23vw
 }
 0% {width:0vw}
+}
+
+.searchPanel .Content .sub-items
+{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+@media (max-width:1200px) 
+{   
+    .searchPanel
+    {
+     display: flex;
+     right:0;
+     z-index: 99;
+    }
+    
+    
+
+    .searchPanel .Content
+    {
+    
+    width:276px;
+    position:absolute;
+    }  
+
+    .search-header
+    {
+        gap:calc(10px + 5vw)
+    }
+    
+
+    .search-header input
+{
+
+ width:264vw;
+}
+
+    .Panel .content .cart-header .left
+
+{
+display:flex;
+padding-left: 5px;
+}
+.Panel .content .cart-header .right
+
+{
+padding-right: 5px;
+}
+
+.sub-items .left img
+{
+ height:10vh;
+ width:10vh
+}
+
+.sub-items .left
+{display:flex;
+ padding:2px;
+ height:13vh;
+}
+
+
+
 }
