--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,8 @@
 .nav {
     width: 100%;
     background-color: #2db457;
+    position: sticky; 
+    top: 0;
   }
   
   .navcontent {
@@ -62,7 +64,11 @@
     flex-flow: row;
   }
   .searchBar
-  {
+  {   
+      position:relative;
+
+      transform:translateX(1px);
+      transform:translateY(5px);
       cursor: pointer;
   }
 
