--- a/src/components/product.css
+++ b/src/components/product.css
@@ -8,6 +8,7 @@
     font-weight: 400;
     height:400px;
     border-radius: 10px;
+    width:270px
     
 }
 
@@ -26,6 +27,20 @@ font-size: larger;
 {   display:flex;
     justify-content: center;
 }
+
+.Details .Description
+{
+  padding:5px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3;     
+  overflow: hidden;         
+  font-size: 2vh;
+  color:rgb(90, 90, 90);
+  font-weight:400
+}
+
 .Details .Price
 {   color:rgb(46, 199, 46)
     
