--- a/src/components/search.css
+++ b/src/components/search.css
@@ -10,6 +10,8 @@
     width:100%;
     height:90%;
     z-index: 99;
+    opacity:1;
+    animation:fadeSearch 0.6s ease-out;
     
 }
 
@@ -64,6 +66,14 @@
 }
 0% {width:0vw}
 }
+
+@keyframes fadeSearch
+{
+100% {opacity:1
+}
+0% {opacity:0}
+}
+
 
 .searchPanel .Content .sub-items
 {
@@ -126,6 +136,7 @@ padding-right: 5px;
  padding:2px;
  height:13vh;
 }
+
 
 
 
