--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,6 +3,7 @@
     background-color: #2db457;
     position: sticky; 
     top: 0;
+    z-index: 98;
   }
   
   .navcontent {
@@ -15,9 +16,9 @@
     color:white;
     gap:1vw;
     font-weight: 100;
-   
+
   }
-  
+
   .left {
     display: flex;
     justify-content: space-evenly;
