--- a/src/components/product.css
+++ b/src/components/product.css
@@ -8,15 +8,29 @@
     font-weight: 400;
     height:400px;
     border-radius: 10px;
-    width:270px
+    width:270px;
+    overflow: hidden;
     
 }
 
+
 img
 {   
+    
     height:200px;
     width:250px;
+    transition: transform 0.3s ease
+
 }
+
+
+
+.Slot img:hover 
+{
+    transform: scale(1.15);
+}
+
+
 
 .Details
 {
