--- a/src/components/single.css
+++ b/src/components/single.css
@@ -121,6 +121,16 @@ height:30vh;
 
   }
 
+  .singlepage .cart-card .button1:active {
+    background-color: #ffffff; /* Green */
+    color: white;
+    width:250px;
+    height:35px;
+    border-radius: 10px;
+    margin:0px;
+
+  }
+
 .Singlepage-container
 {
     display:flex;
