--- a/src/components/products.css
+++ b/src/components/products.css
@@ -12,3 +12,19 @@
     background-color: rgba(255, 255, 255, 0.648);
     
 }
+.homepic
+{
+    width:100%;
+    height:100%;
+}
+.homepic img{
+    width:100%;
+    height:calc( 25vh + 15vw)
+}
+
+.gap
+{
+    width:100%;
+    height:12vh;
+    background-color: white;
+}
