--- a/src/components/registration.css
+++ b/src/components/registration.css
@@ -83,3 +83,20 @@ width:25vw;
     width:287.5px
 }
 }
+
+.containtitle
+{
+    width:100%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-content:center;
+    padding-top:10px;
+
+}
+
+.productstitle
+{
+    font-size:5.5vh;
+    font-weight: 500;
+}
