--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,16 +6,27 @@
     z-index: 98;
   }
   
+  .nav-with-box-shadow
+  {
+    width: 100%;
+    background-color: #2db457;
+    position: sticky; 
+    top: 0;
+    z-index: 98;
+    box-shadow: 0px 0px 10px black;
+  }
+
   .navcontent {
     margin-top:5px white;
     display: flex;
-    padding: 0 7vw;
+    padding: 0.3vw 7vw;
     align-items: center;
     justify-content: space-between;
     height:7vh;
     color:white;
     gap:1vw;
     font-weight: 100;
+   
 
   }
 
@@ -59,7 +70,7 @@
     align-items: center;
     justify-content: space-between;
     height:9vh;
-    background-color:white;
+    background-color:rgb(255, 0, 0);
     color:#008e2d;
     gap:1vw;
     font-weight: 400;
@@ -72,6 +83,11 @@
       transform:translateX(1px);
       transform:translateY(5px);
       cursor: pointer;
+  }
+
+  .seacrhContainer
+  {
+    background-color: #2db457;
   }
 
   .logo img{
